@@ -1,3 +1,4 @@
+Intro tab: Only update and render views when visible, see #3314
 Intro tab: Added developer menu items for debugging performance, see #3314
 Intro tab: Improved performance for cake slice dirty rectangles, see #3314
 Intro tab: Fixed performance in PieSetContentNode for dirty rectangles, see #3314 [63694]
